--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/plugin-cloud": "5.15.0",
     "@strapi/plugin-users-permissions": "5.15.0",
     "@strapi/provider-email-nodemailer": "^5.15.0",
+    "@strapi/provider-upload-cloudinary": "^5.17.0",
     "@strapi/strapi": "5.15.0",
     "better-sqlite3": "11.3.0",
     "pg": "^8.16.3",
