add the image field

--- a/src/components/project/projects.json
+++ b/src/components/project/projects.json
@@ -48,9 +48,18 @@
       "component": "link.links",
       "repeatable": true
     },
-    "image": {
+    "mutipleProjectImage": {
       "type": "media",
       "multiple": true,
+      "allowedTypes": [
+        "images",
+        "files"
+      ]
+    },
+    "projectImage": {
+      "type": "media",
+      "multiple": true,
+      "required": true,
       "allowedTypes": [
         "images",
         "files"
