change the image field to video in starpi

--- a/src/components/project/projects.json
+++ b/src/components/project/projects.json
@@ -53,7 +53,8 @@
       "multiple": true,
       "allowedTypes": [
         "images",
-        "files"
+        "files",
+        "videos"
       ]
     },
     "projectImage": {
